@@ -848,6 +848,18 @@ name|w3c
 operator|.
 name|dom
 operator|.
+name|Attr
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|w3c
+operator|.
+name|dom
+operator|.
 name|DOMException
 import|;
 end_import
@@ -9505,14 +9517,6 @@ argument_list|(
 literal|"bad conf file: element not<property>"
 argument_list|)
 expr_stmt|;
-name|NodeList
-name|fields
-init|=
-name|prop
-operator|.
-name|getChildNodes
-argument_list|()
-decl_stmt|;
 name|String
 name|attr
 init|=
@@ -9539,6 +9543,126 @@ name|LinkedList
 argument_list|<
 name|String
 argument_list|>
+argument_list|()
+decl_stmt|;
+name|Attr
+name|propAttr
+init|=
+name|prop
+operator|.
+name|getAttributeNode
+argument_list|(
+literal|"name"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|propAttr
+operator|!=
+literal|null
+condition|)
+name|attr
+operator|=
+name|StringInterner
+operator|.
+name|weakIntern
+argument_list|(
+name|propAttr
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|propAttr
+operator|=
+name|prop
+operator|.
+name|getAttributeNode
+argument_list|(
+literal|"value"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|propAttr
+operator|!=
+literal|null
+condition|)
+name|value
+operator|=
+name|StringInterner
+operator|.
+name|weakIntern
+argument_list|(
+name|propAttr
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|propAttr
+operator|=
+name|prop
+operator|.
+name|getAttributeNode
+argument_list|(
+literal|"final"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|propAttr
+operator|!=
+literal|null
+condition|)
+name|finalParameter
+operator|=
+literal|"true"
+operator|.
+name|equals
+argument_list|(
+name|propAttr
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|propAttr
+operator|=
+name|prop
+operator|.
+name|getAttributeNode
+argument_list|(
+literal|"source"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|propAttr
+operator|!=
+literal|null
+condition|)
+name|source
+operator|.
+name|add
+argument_list|(
+name|StringInterner
+operator|.
+name|weakIntern
+argument_list|(
+name|propAttr
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|NodeList
+name|fields
+init|=
+name|prop
+operator|.
+name|getChildNodes
 argument_list|()
 decl_stmt|;
 for|for
