@@ -1388,6 +1388,195 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testCompactFormat ()
+specifier|public
+name|void
+name|testCompactFormat
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|out
+operator|=
+operator|new
+name|BufferedWriter
+argument_list|(
+operator|new
+name|FileWriter
+argument_list|(
+name|CONFIG
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|startConfig
+argument_list|()
+expr_stmt|;
+name|appendCompactFormatProperty
+argument_list|(
+literal|"a"
+argument_list|,
+literal|"b"
+argument_list|)
+expr_stmt|;
+name|appendCompactFormatProperty
+argument_list|(
+literal|"c"
+argument_list|,
+literal|"d"
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|appendCompactFormatProperty
+argument_list|(
+literal|"e"
+argument_list|,
+literal|"f"
+argument_list|,
+literal|false
+argument_list|,
+literal|"g"
+argument_list|)
+expr_stmt|;
+name|endConfig
+argument_list|()
+expr_stmt|;
+name|Path
+name|fileResource
+init|=
+operator|new
+name|Path
+argument_list|(
+name|CONFIG
+argument_list|)
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|conf
+operator|.
+name|addResource
+argument_list|(
+name|fileResource
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"b"
+argument_list|,
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"a"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"d"
+argument_list|,
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"c"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|s
+init|=
+name|conf
+operator|.
+name|getFinalParameters
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|s
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|s
+operator|.
+name|contains
+argument_list|(
+literal|"c"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"f"
+argument_list|,
+name|conf
+operator|.
+name|get
+argument_list|(
+literal|"e"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|sources
+init|=
+name|conf
+operator|.
+name|getPropertySources
+argument_list|(
+literal|"e"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|sources
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"g"
+argument_list|,
+name|sources
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|fileResource
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|sources
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|assertEq (Object a, Object b)
 specifier|public
 specifier|static
@@ -1692,6 +1881,175 @@ operator|.
 name|write
 argument_list|(
 literal|"</property>\n"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|appendCompactFormatProperty (String name, String val)
+name|void
+name|appendCompactFormatProperty
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|String
+name|val
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|appendCompactFormatProperty
+argument_list|(
+name|name
+argument_list|,
+name|val
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|appendCompactFormatProperty (String name, String val, boolean isFinal)
+name|void
+name|appendCompactFormatProperty
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|String
+name|val
+parameter_list|,
+name|boolean
+name|isFinal
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|appendCompactFormatProperty
+argument_list|(
+name|name
+argument_list|,
+name|val
+argument_list|,
+name|isFinal
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|appendCompactFormatProperty (String name, String val, boolean isFinal, String source)
+name|void
+name|appendCompactFormatProperty
+parameter_list|(
+name|String
+name|name
+parameter_list|,
+name|String
+name|val
+parameter_list|,
+name|boolean
+name|isFinal
+parameter_list|,
+name|String
+name|source
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"<property "
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"name=\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"\" "
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"value=\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+name|val
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"\" "
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|isFinal
+condition|)
+block|{
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"final=\"true\" "
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|source
+operator|!=
+literal|null
+condition|)
+block|{
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"source=\""
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+name|source
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"\" "
+argument_list|)
+expr_stmt|;
+block|}
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"/>\n"
 argument_list|)
 expr_stmt|;
 block|}
